--- a/98-nestjs-api/wincc-dashboard/package.json
+++ b/98-nestjs-api/wincc-dashboard/package.json
@@ -12,9 +12,12 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-router-dom": "^5.1.3",
+    "query-string": "^6.10.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-grid-layout": "^0.17.1",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "react-storage-hooks": "^3.0.3",
     "typescript": "~3.7.2"
