--- a/98-nestjs-api/wincc-dashboard/tsconfig.json
+++ b/98-nestjs-api/wincc-dashboard/tsconfig.json
@@ -18,7 +18,10 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react",
-    "noImplicitAny": false
+    "noImplicitAny": false,
+    "typeRoots": [
+      "./node_modules/@types",
+    ]
   },
   "include": [
     "src"
